fix accuracy problems in argument ranges where j0(x) is small, closes PR lib/44170 by Henning Petersen (originally from Steven G. Kargl per FreeBSD PR bin/144306)